--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,7 +63,7 @@ IF(${ROOT_VERSION_MAJOR} MATCHES "6")
 	INSTALL (FILES ${CMAKE_CURRENT_BINARY_DIR}/libPAF.rootmap
 		DESTINATION ${CMAKE_SOURCE_DIR}/lib/)
          
-	INSTALL (FILES ${CMAKE_CURRENT_BINARY_DIR}/G__PAF_rdict.pcm
+	INSTALL (FILES ${CMAKE_CURRENT_BINARY_DIR}/libPAF_rdict.pcm
 		DESTINATION ${CMAKE_SOURCE_DIR}/lib/)
 ENDIF(${ROOT_VERSION_MAJOR} MATCHES "6")
 
