compilation: removal of compiler optimizations
Signed-off-by: Javier Delgado <JavierDelgado@outlook.com>

--- a/etc/Makefile.in
+++ b/etc/Makefile.in
@@ -22,7 +22,7 @@ LIBS+=-L$(PAFPATH)/lib -lPAF
 
 MYINCLUDES=$(shell INC=""; for i in `ls -d $(PWD)/../*/`; do INC="-I$$i $$INC"; done; echo $$INC)
 MYINCLUDES+=-I$(PAFPATH)/include
-CXXFLAGS+= $(MYINCLUDES) -g
+CXXFLAGS+= $(MYINCLUDES) -O0  -g
 MYLIBS+=-L$(PAFPATH)/lib -lPAF
 
 #------------------------------------------------------------------------------
